--- a/oq-guide-bmbf/guide.html
+++ b/oq-guide-bmbf/guide.html
@@ -314,7 +314,7 @@
                 <h3 id="install_backup">备份游戏数据</h3>
                 <p>（如果你刚刚购买Beat Saber，还没有成绩数据需要备份，可以跳过此步）</p>
 
-                <p>使用USB数据线，将Quest连接至电脑，并在Quest中允许文件传输，然后即可进入Quest的存储目录。</p>
+                <p>使用USB数据线，将Quest连接至电脑，并在Quest头显中允许文件传输，然后即可进入Quest的存储目录。</p>
                 <p>请进入BS的应用数据目录：<code>\Android\data\com.beatgames.beatsaber\files</code></p>
                 <p>将其中的<code>AvatarData.dat</code>、<code>PlayerData.dat</code>与<code>settings.cfg</code>复制到电脑中保存即可完成备份。</p>
 
@@ -480,7 +480,7 @@
 
                 <h3 id="install_recovery">恢复游戏数据</h3>
                 <p>（如果你没有备份数据，请跳过此步）</p>
-                <p>使用USB数据线，将Quest连接至电脑，并在Quest中允许文件传输，然后即可进入Quest的存储目录。</p>
+                <p>使用USB数据线，将Quest连接至电脑，并在Quest头显中允许文件传输，然后即可进入Quest的存储目录。</p>
                 <p>请进入BS的应用数据目录：<code>\Android\data\com.beatgames.beatsaber\files</code></p>
                 <p>将之前备份的<code>AvatarData.dat</code>、<code>PlayerData.dat</code>与<code>settings.cfg</code>复制到Quest即可完成恢复。</p>
               </div>
@@ -622,7 +622,7 @@
                 <a href="https://github.com/wgzeyu/Beat-Saber-Song-Folder-Manager/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank" class="btn btn-info">备用下载(国内)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
                 <hr>
                 <h4>添加歌曲</h4>
-                <p>使用USB数据线，将Quest连接至电脑，并在Quest中允许文件传输，然后即可进入Quest的存储目录。</p>
+                <p>使用USB数据线，将Quest连接至电脑，并在Quest头显中允许文件传输，然后即可进入Quest的存储目录。</p>
                 <p>
                   将单独的歌曲文件夹复制到自定义歌曲目录即可完成添加。<br>
                   自定义歌曲目录：<code>\ModData\com.beatgames.beatsaber\Mods\SongLoader\CustomLevels</code>
