--- a/buy/guide.html
+++ b/buy/guide.html
@@ -222,18 +222,18 @@
                 <p>
                   <s>目前所知的兑换码来源是Oculus官方的邀请活动</s>，在邀请完他人购买Quest2之后对方激活了一台新的Quest2，邀请者与被邀者各送30美元商店点券，同时又有不少商家加价提供代激活服务……<br>
                   <strong>
-                    现在有搞黑卡的商家也开始售卖兑换码，这种方式兑换的游戏会在一段时间后遭到退回。
+                    现在有搞黑卡的商家也开始售卖兑换码，这种方式兑换的游戏会在一段时间后遭到回收。
                   </strong>
                 </p>
                 <p>
-                  这个方法是通过第三方渠道下单，可靠性低，不是很推荐，下方有其他购买方法。<br>（或者点击左上方快捷导航可快速切换）
+                  <strong>这个方法是通过第三方渠道下单，可靠性低，不推荐</strong>，下方有其他购买方法。<br>（或者点击左上方快捷导航可快速切换）
                 </p>
                 <p>在购物平台中搜索 <code>节奏光剑 兑换码</code> ，找到商品后核对是<strong>Quest一体机平台的正版BeatSaber兑换码</strong>即可下单。</p>
                 <div class="intro2 clearfix">
                   <p>
                     <i class="fa fa-exclamation-triangle"></i> 请务必选择有担保交易的、可靠的购物平台，并保留好你的购买记录。<br>
                     <i class="fa fa-exclamation-triangle"></i> 请千万不要泄露你买到的兑换码，不然可能会遭到他人抢兑。<br>
-                    <i class="fa fa-exclamation-triangle"></i> 警告：近期有部分玩家通过代购方式购买的游戏遭到商店退回，<b>所以现在不推荐以这种渠道购买游戏</b>，<br>
+                    <i class="fa fa-exclamation-triangle"></i> 警告：近期有部分玩家通过代购方式购买的游戏遭到商店回收，<b>所以现在不推荐以这种渠道购买游戏</b>，<br>
                     我们不对任何商家做出保证，如果在非官方渠道购买的游戏出了问题，只能你自己去维权。<br>
                     <i class="fa fa-exclamation-triangle"></i> 如果出现问题，你可以尝试找平台方申请退款、或找Meta申请补偿，有很多成功案例，但过程很麻烦
                   </p>
