--- a/buy/guide.html
+++ b/buy/guide.html
@@ -222,7 +222,7 @@
                 <p>
                   <s>目前所知的兑换码来源是Oculus官方的邀请活动</s>，在邀请完他人购买Quest2之后对方激活了一台新的Quest2，邀请者与被邀者各送30美元商店点券，同时又有不少商家加价提供代激活服务……<br>
                   <strong>
-                    现在有搞黑卡的商家也开始售卖兑换码，这种方式兑换的游戏会在一段时间后遭到回收。
+                    现在有搞黑卡的商家也开始售卖兑换码，这种方式兑换的游戏会在一段时间后遭到回收（删除游戏、不退款）。
                   </strong>
                 </p>
                 <p>
