remove mirror links

--- a/buy/guide.html
+++ b/buy/guide.html
@@ -351,7 +351,7 @@
                 <p><img src="img/steam_zhuce1.png" class="img-responsive img-thumbnail"></p>
                 <div class="intro2 clearfix">
                   <p>
-                    <i class="fa fa-exclamation-triangle"></i> 如果提示CAPTCHA的响应无效、重试后依旧如此，请尝试将你的科学上网临时改成全局模式。
+                    <i class="fa fa-exclamation-triangle"></i> 如果提示CAPTCHA的响应无效、重试后依旧如此，有可能是你运行的代理程序导致的。
                   </p>
                 </div>
                 <p>在点击<code>继续</code>后，会弹出窗口告诉你请到邮箱中查看来自Steam的邮件，<b class="rainbow2">此时请不要关闭这个网页</b>。</p>
