--- a/oq-guide/guide.html
+++ b/oq-guide/guide.html
@@ -112,9 +112,8 @@
                 <a href="#tiaozhuanqp" onclick="top.location.href='https://bs.wgzeyu.com/oq-guide-qp/';"><img src="img/qp-569h.png" class="img-responsive img-thumbnail"></a>
                 <a href="#tiaozhuanqp" onclick="top.location.href='https://bs.wgzeyu.com/oq-guide-qp/';"><h4>QuestPatcher方案</h4></a>
                 <ul>
-                    <li><span class="rainbow2">无需科学上网，可直接通过国内服务器下载数据！</span></li>
-                    <li><strong>中文界面，傻瓜式一键操作</strong>，大部分操作在电脑上完成，</li>
-                    <li>也可以做到在一体机模式下安装Mod、下载歌曲等功能。</li>
+                    <li>中文界面，傻瓜式一键操作，大部分操作在电脑上完成，</li>
+                    <li>也可以做到在一体机模式内下载歌曲。</li>
                 </ul>
                 <a href="#tiaozhuanqp" onclick="top.location.href='https://bs.wgzeyu.com/oq-guide-qp/';" class="btn btn-primary">点我进入QuestPatcher教程</a> <a href="https://bs.wgzeyu.com/oq-guide-qp/" target="_blank" class="btn btn-info">在新页面中打开教程</a>
               </div>
@@ -122,9 +121,8 @@
                 <a href="#tiaozhuanbmbf" onclick="top.location.href='https://bs.wgzeyu.com/oq-guide-bmbf/';"><img src="img/bmbf-16.webp" class="img-responsive img-thumbnail"></a>
                 <a href="#tiaozhuanbmbf" onclick="top.location.href='https://bs.wgzeyu.com/oq-guide-bmbf/';"><h4>BMBF方案</h4></a>
                 <ul>
-                    <li><span class="rainbow2">需精通科学上网，不然用不了，弄不好还会拦截内网访问</span></li>
-                    <li><strong>英文界面，容易遇到网络问题</strong>，大部分操作在头显内完成</li>
-                    <li>有非常成熟的一体机模式下安装Mod、下载歌曲等功能。</li>
+                    <li>英文界面，操作步骤较多，大部分操作在头显内完成，</li>
+                    <li>有非常成熟的一体机模式内安装Mod、下载歌曲等功能。</li>
                 </ul>
                 <a href="#tiaozhuanbmbf" onclick="top.location.href='https://bs.wgzeyu.com/oq-guide-bmbf/';" class="btn btn-primary">点我进入BMBF教程</a> <a href="https://bs.wgzeyu.com/oq-guide-bmbf/" target="_blank" class="btn btn-info">在新页面中打开教程</a>
               </div>
