--- a/pc-guide/guide.html
+++ b/pc-guide/guide.html
@@ -273,14 +273,13 @@
                 <p>目前唯一推荐的Mod安装器，具有很完善的Mod相关功能，还可以用于支持OneClick一键添加资源功能。</p>
                 <hr>
                 <h4>ModAssistant（增强版）</h4>
-                <p>目前ModAssistant有两个不同版本，<strong>下方只提供推荐的增强版</strong>，<span onclick="window.open('https://github.com/Assistant/ModAssistant/releases/latest','_blank','');">如需下载不推荐的原版请点我</span>。<br>增强版为中文Mod列表、默认国际源、可切换国内源；而原版为英文Mod列表、只能使用国际下载源。</p>
-                <a href="https://github.com/beatmods-top/ModAssistant/releases/latest/download/ModAssistant.exe" target="_blank" class="btn btn-primary">GH一键下载</a> <a href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank" class="btn btn-info">国内网盘下载</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用网盘下载</a> <a href="https://github.com/beatmods-top/ModAssistant/releases/latest" target="_blank" class="btn btn-info">GitHub下载</a> <strong> （网盘下载需进入其中的<code>工具</code>文件夹）</strong>
+                <p>目前ModAssistant有两个不同版本，<strong>下方只提供推荐的增强版</strong>，<span onclick="window.open('https://github.com/Assistant/ModAssistant/releases/latest','_blank','');">如需下载不推荐的原版请点我</span>。<br>增强版是中文的Mod列表、默认勾选了一些常用Mod，而原版就只有英文的Mod列表。</p>
+                <a href="https://github.com/beatmods-top/ModAssistant/releases/latest/download/ModAssistant.exe" target="_blank" class="btn btn-primary">GH一键下载</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用网盘下载</a> <a href="https://github.com/beatmods-top/ModAssistant/releases/latest" target="_blank" class="btn btn-info">GitHub下载</a> <strong> （网盘下载需进入其中的<code>工具</code>文件夹）</strong>
                 <hr>
                 <div class="intro2 clearfix">
                   <p>
                     <i class="fa fa-exclamation-triangle"></i> 若提示 <code>通常不会下载ModAssistant...</code>，请点击：右侧的三个点 → 保留 → 显示详细信息 → 仍然保留<br>
                     <i class="fa fa-exclamation-triangle"></i> 若提示 <code>Windows已保护你的电脑</code>，请点击：更多信息 → 仍要运行<br>
-                    <i class="fa fa-exclamation-triangle"></i> 上方提供的多个下载按钮均为相同内容，互为备份，随便选一个就行，要是这都能卡住你那就别整了。<br>
                     <i class="fa fa-exclamation-triangle"></i> <b>Pico</b>玩家需注意，Pico串流助手与Mod可能有冲突，要是出问题可以试试 <a href="https://bs.wgzeyu.com/pc-faq/#modp" target="_blank"><u>问题解答(点我打开)</u></a> 的方法
                   </p>
                 </div>
@@ -309,10 +308,7 @@
                     <i class="fa fa-exclamation-triangle"></i> 如果ModAssistant提示你让你检查左下角游戏版本是否正确，请必须先检查确保没问题才能安装Mod！<br>
                     游戏的地板脚印上会显示版本号，必须确保这个版本号与左下角选择的游戏版本相同，否则会把游戏弄坏！<br>
                     <i class="fa fa-exclamation-triangle"></i> <b>Pico</b>玩家需注意，Pico串流助手与Mod可能有冲突，要是出问题可以试试 <a href="https://bs.wgzeyu.com/pc-faq/#modp" target="_blank"><u>问题解答(点我打开)</u></a> 的方法<br>
-                    <i class="fa fa-exclamation-triangle"></i> <b>不</b>推荐将 <code>选项</code> 中的下载源切换为 <code>包子源</code>，推荐使用 <code>国内源</code> 或 <code>国际源</code>，包子源有时会出问题。<br>
-                    <i class="fa fa-exclamation-triangle"></i> 如果在安装Mod过程中遇到问题，请<a href="https://bs.wgzeyu.com/pc-faq/#modp" target="_blank"><u>点我查看Mod问题解答</u></a>，还是解决不了可在右上角加群提问。<br>
-                    <i class="fa fa-exclamation-triangle"></i> 如果你安装了360等第三方杀软，推荐先将其更换为系统自带杀软（Windows Defender）再装Mod。<br>
-                    360这类三方杀软容易无提示误拦截导致全部或部分Mod不生效，而系统自带杀软就没问题，查杀率还更高
+                    <i class="fa fa-exclamation-triangle"></i> 如果在安装Mod过程中遇到问题，请<a href="https://bs.wgzeyu.com/pc-faq/#modp" target="_blank"><u>点我查看Mod问题解答</u></a>，还是解决不了可在右上角加群提问。
                   </p>
                 </div>
               </div>
@@ -350,7 +346,7 @@
                   依次进入<code>Mod相关文件</code> → <code>【Steam与Rift平台】你的游戏版本</code>文件夹即可下载该Mod。<br>
                   游戏版本可以在游戏菜单界面地板上的脚印内看到。
                 </p>
-                <a href="http://share.wgzeyu.vip/?Ly9Nb2QlRTclOUIlQjglRTUlODUlQjMlRTYlOTYlODclRTQlQkIlQjYv" target="_blank" class="btn btn-primary">进入主站 (推荐)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">进入网盘</a>
+                <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-primary">进入网盘</a>
                 <hr>
                 <p class="rainbow2"><a href="#modmanual_install" onclick="limg('oldmodinstallgif');" class="rainbow2">下载后，<b>点我进入手动安装Mod教程</b>，跟着该教程操作即可完成安装。</a></p>
                 <div class="intro2 clearfix">
@@ -360,11 +356,6 @@
                   </p>
                 </div>
 
-                <!--div class="intro2 clearfix">
-                  <p>
-                    <i class="fa fa-exclamation-triangle"></i> 游戏刚刚更新至1.16.1，该Mod暂时还没有更新，需要等待该Mod更新后才能切换为中文。<br>若急用可 <a target="_blank" href="https://bs.wgzeyu.com/drive/">点我进入资源网盘</a> 下载1.15.0备份，临时替换游戏降级后再安装Mod。
-                  </p>
-                </div-->
               </div>
 
               <div class="col-md-12">
@@ -441,10 +432,9 @@
                 <hr>
                 <h4>BeatSaver</h4>
                 <p>
-                  目前最大的BeatSaber自定义歌曲(谱面)下载网站，也是各位谱师唯一的发布地址。<br>
-                  <span class="rainbow2">若源站下载过慢甚至无法下载，可以尝试国内中转</span>。
+                  目前最大的BeatSaber自定义歌曲(谱面)下载网站，也是各位谱师唯一的发布地址。
                 </p>
-                <a href="https://beatsaver.com/" target="_blank" class="btn btn-primary">进入源站(推荐)</a> <a href="http://beatsaver.wgzeyu.vip/" target="_blank" class="btn btn-info">国内中转</a> <a href="https://bsaber.org/?from_cache=1&sort=uploaded_desc" target="_blank" class="btn btn-info">国外镜像</a>
+                <a href="https://beatsaver.com/" target="_blank" class="btn btn-primary">进入源站(推荐)</a> <a href="https://bsaber.org/?from_cache=1&sort=uploaded_desc" target="_blank" class="btn btn-info">进入镜像站</a>
                 <hr>
                 <p>进入<a href="https://beatsaver.com/" target="_blank">BeatSaver</a>，输入搜索内容或设置过滤方式以后，点击<code>Search</code>就可以找到歌曲，如果不打算搜索可以不填。</p>
                 <p><img src="img/newbeatsaver.webp" alt="Beatsaver" class="img-responsive img-thumbnail"></p>
@@ -468,7 +458,6 @@
                 <p>点击后会弹出OneClick窗口，可以在里面看到执行状态。</p>
                 <div class="intro2 clearfix">
                   <p>
-                    <i class="fa fa-exclamation-triangle"></i> 如果下载缓慢或下载失败，请尝试在ModAssistant界面左下方切换OneClick下载源。<br>
                     <i class="fa fa-exclamation-triangle"></i> 通过ModAssistant注册OneClick以后，请不要对ModAssistant或其所在文件夹执行更名、挪动、删除等操作，这会导致注册失效；如果注册已失效，可打开ModAssistant取消勾选OneClick后重新勾选回去。
                   </p>
                 </div>
@@ -487,7 +476,6 @@
                 </p>
                 <div class="intro2 clearfix">
                   <p>
-                    <i class="fa fa-exclamation-triangle"></i> 如果下载缓慢或下载失败，请尝试更换为<a href="http://beatsaver.wgzeyu.vip/" target="_blank">国内中转</a>再下载，上方有链接。<br>
                     <i class="fa fa-exclamation-triangle"></i> 图中是多选压缩包时的选项，如果你只选中了一个压缩包，选项名将变成 <code>解压到[压缩包名称]</code>
                   </p>
                 </div>
@@ -509,9 +497,7 @@
                 <p><img src="img/TBSSNS.webp" id="tranbss" data-src="../speedlimit/TBSSN.webp" onclick="limg('tranbss');" class="lzy_img img-responsive img-thumbnail"></p>
                 <div class="intro2 clearfix">
                   <p>
-                    <i class="fa fa-exclamation-triangle"></i> 如果下载歌曲非常缓慢或下载失败，你可以将下载地址切换为我提供的国内中转，操作步骤为：<br>
-                    <code>MORE▼</code> > <code>BETTERSONGSEARCH SETTINGS</code> > <code>Use Chinese BeatSaver Mirror</code> > 打开开关 > <code>OK, ENABLE</code>
-                  </p>
+                    <i class="fa fa-exclamation-triangle"></i> 如果内容加载不出、歌曲下载缓慢或下载失败，可能是由于网络原因导致的。
                 </div>
 
                 <h3 id="addsong_moresong">游戏内下载歌曲（旧）</h3>
@@ -519,10 +505,7 @@
                 <p><img src="img/Tnewloading.webp" id="transong" data-src="../speedlimit/pc-guide/Tmoresong.new.webp" onclick="limg('transong');" class="lzy_img img-responsive img-thumbnail"></p>
                 <div class="intro2 clearfix">
                   <p>
-                    <i class="fa fa-exclamation-triangle"></i> 如果加载或者下载速度非常缓慢，可以尝试切换为国内版插件，从WGzeyu提供的国内中转下载。<br>
-                    从<a href="http://share.wgzeyu.vip/?Ly9Nb2QlRTclOUIlQjglRTUlODUlQjMlRTYlOTYlODclRTQlQkIlQjYv" target="_blank"><u>BS游戏资源共享</u></a>的Mod目录中下载Mod后，按照<a href="#modmanual_install" onclick="limg('oldmodinstallgif');"><u>手动安装Mod教程</u></a>安装即可。<br>
-                    注意：加粗字体可点击；安装国内版之后再使用ModAssistant会覆盖为原版，可重新手动覆盖回去来解决
-                  </p>
+                    <i class="fa fa-exclamation-triangle"></i> 如果内容加载不出、歌曲下载缓慢或下载失败，可能是由于网络原因导致的。
                 </div>
 
                 <h3 id="addsong_custom-levels_1">游戏内选项位置</h3>
@@ -559,16 +542,9 @@
                 <p>我们整理的大量BeatSaber歌曲包都保存在这里，下载曲包后解压至单独的文件夹即可添加。<br>（多选压缩包时的右键选项才有<code>解压至单独文件夹</code>，而单选时，这个选项叫做<code>解压至[压缩包名]</code>）</p>
                 <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-primary">进入网盘</a> （推荐从前两个网盘的<code>歌曲压缩包</code>目录中下载）
                 <hr>
-                <h4>Beat Saber曲包资源同步</h4>
-                <p>
-                  曲包内容与上方的网盘相同，但这个渠道是通过P2P下载、不走服务器，还能自动更新歌曲文件。<br>
-                  只要保持ResilioSync运行，每天自动更新最新的曲包到游戏中（歌曲路径方案），无需重复操作添加！
-                </p>
-                <a href="https://bs.wgzeyu.com/songs/" target="_blank" class="btn btn-primary">进入下载</a>
-                <hr>
                 <h4>BeatSpider</h4>
                 <p>WGzeyu为了整理曲包制作的专业谱面整理、下载软件，拥有非常多的功能来处理歌曲包、歌曲列表。</p>
-                <a href="https://github.com/WGzeyu/BeatSpider/releases/latest" target="_blank" class="btn btn-primary">GitHub下载</a> <a href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank" class="btn btn-info">备用下载(国内)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
+                <a href="https://github.com/WGzeyu/BeatSpider/releases/latest" target="_blank" class="btn btn-primary">GitHub下载</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
                 <hr>
 
                 <h3 id="addsong_foldereditor">添加曲包为单独歌单</h3>
@@ -580,7 +556,7 @@
                 <p>如果你打算添加的曲包数量不是特别多，我推荐歌曲路径方案，否则，推荐歌曲列表方案。</p>
                 <p>
                   <strong>如果你想实现自动/一键更新曲包，要注意：</strong><br>
-                  歌曲路径方案：必须通过上方<code>Beat Saber曲包资源同步</code>中的ResilioSync渠道下载，才能实现自动更新；<br>
+                  歌曲路径方案：必须通过顶部导航栏中曲包同步中的ResilioSync渠道下载，才能实现自动更新；<br>
                   歌曲列表方案：必须从网盘中下载我提供的歌曲列表才能实现一键更新，推荐从前两个网盘下载歌曲压缩包。
                 </p>
                 <div class="intro2 clearfix">
@@ -594,7 +570,7 @@
                 <hr>
                 <h4>Beat Saber 歌曲路径管理器 (Beat Saber Song Folder Manager)</h4>
                 <p>WGzeyu使用易语言编写的歌曲路径管理工具，支持拖入添加、路径纠错、更换封面等诸多功能，使用简单。</p>
-                <a href="https://github.com/wgzeyu/Beat-Saber-Song-Folder-Manager/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank" class="btn btn-info">备用下载(国内)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
+                <a href="https://github.com/wgzeyu/Beat-Saber-Song-Folder-Manager/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
                 <hr>
                 <p>下载<code>歌曲路径管理器</code>之后直接运行即可使用，这个软件可以将游戏外的文件夹设置为自定义歌曲目录。</p>
                 <p><strong>打开软件，将曲包解压出的文件夹拖入窗口内，然后点击<code>保存列表</code>，即可完成曲包添加。</strong></p>
@@ -701,24 +677,24 @@
                   里面有很多我们整理的歌曲列表，不过我更推荐直接下载曲包而不是列表，按“<a href="#addsong_foldereditor">添加曲包为单独歌单</a>”添加。<br>
                   PC平台可以<a href="#addsong_foldereditor">直接添加曲包文件夹为单独歌单</a>，用不着添加歌曲列表，网盘里的列表通常是准备给Quest平台用。
                 </p>
-                <a href="http://share.wgzeyu.vip/?Ly8lRTYlQUQlOEMlRTYlOUIlQjIlRTUlODglOTclRTglQTElQTgv" target="_blank" class="btn btn-primary">下载列表(主站)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">下载曲包(网盘)</a>（列表推荐从主站下载，在<code>歌曲列表</code>目录，不是<s><code>歌曲包</code></s>！）
+                <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-primary">进入网盘</a>
                 <hr>
                 <h4>BS歌曲路径管理器 (Beat Saber Song Folder Manager)</h4>
                 <p>
                   WGzeyu使用易语言编写的歌单工具，本来是用于PC端分类添加曲包，后来加入了导出歌单功能，<br>
                   现在可以将歌曲包转换为歌曲列表，不过我更推荐点击保存列表，直接就能用，无需导出歌单添加。
                 </p>
-                <a href="https://github.com/wgzeyu/Beat-Saber-Song-Folder-Manager/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank" class="btn btn-info">备用下载(国内)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
+                <a href="https://github.com/wgzeyu/Beat-Saber-Song-Folder-Manager/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
                 <hr>
                 <h4>BeatSpider</h4>
                 <p>WGzeyu为了整理曲包制作的专业谱面整理、下载软件，拥有非常多的功能来处理歌曲包、歌曲列表。</p>
-                <a href="https://github.com/WGzeyu/BeatSpider/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank" class="btn btn-info">备用下载(国内)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
+                <a href="https://github.com/WGzeyu/BeatSpider/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
                 <hr>
                 <h4>Beatlist</h4>
                 <p>
                   一个歌曲列表编辑工具，<s>虽然已经停止更新，不过依然可以使用。</s>现在有大佬接手更新了。
                 </p>
-                <a href="https://github.com/ranmd9a/beatlist/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank" class="btn btn-info">备用下载(国内)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
+                <a href="https://github.com/ranmd9a/beatlist/releases/latest" target="_blank" class="btn btn-primary">GitHub下载(推荐)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">备用下载(网盘)</a> （备用下载在<code>工具</code>目录内）
                 <hr>
 
                 <h3 id="addsong_playlist_oneclick">一键添加歌曲列表</h3>
@@ -826,10 +802,9 @@
                 <hr>
                 <h4>ModelSaber</h4>
                 <p>
-                  目前最大的PC平台BS模型资源下载网站，选择模型类型即可浏览与下载。<br>
-                  若源站下载过慢甚至无法下载，推荐尝试国内中转。
+                  目前最大的PC平台BS模型资源下载网站，选择模型类型即可浏览与下载。
                 </p>
-                <a href="https://modelsaber.com/" target="_blank" class="btn btn-primary">进入源站(推荐)</a> <a href="http://modelsaber.wgzeyu.vip/" target="_blank" class="btn btn-info">国内中转</a>
+                <a href="https://modelsaber.com/" target="_blank" class="btn btn-primary">进入ModelSaber</a>
                 <hr>
 
                 <h3 id="changemodel_oneclick">一键添加模型</h3>
@@ -842,7 +817,7 @@
                 <p>点击后会弹出OneClick窗口，可以在里面看到执行状态。</p>
                 <div class="intro2 clearfix">
                   <p>
-                    <i class="fa fa-exclamation-triangle"></i> 如果下载缓慢或下载失败，请尝试在ModAssistant界面左下方切换OneClick下载源。
+                    <i class="fa fa-exclamation-triangle"></i> 如果下载缓慢或下载失败，一般是网络原因导致。
                   </p>
                 </div>
 
@@ -851,11 +826,6 @@
                 <p>
                   在<a href="https://modelsaber.com/" target="_blank">ModelSaber</a>中点击<code>Download</code>即可下载模型。
                 </p>
-                <div class="intro2 clearfix">
-                  <p>
-                    <i class="fa fa-exclamation-triangle"></i> 如果下载缓慢或下载失败，请尝试更换为<a href="http://modelsaber.wgzeyu.vip/" target="_blank">国内中转</a>再下载，上方有链接。
-                  </p>
-                </div>
                 <p>
                   随后，将下载到的模型文件放到对应的模型目录即可完成添加。<br>
                   自定义光剑：<span style="white-space:nowrap;"><code>Beat Saber\CustomSabers</code></span>，格式：<code>.saber</code><br>
@@ -916,17 +886,16 @@
                 <hr>
                 <h4>BSMG Discord</h4>
                 <p>
-                  国际社区的官方群组，作者首选的发布地址，可以在其中的<code>#pc-mods</code>分类下载测试版Mod，英文，需科学上网。<br>
-                  如果没梯子，请尝试通过其他地址下载，例如下方的BS资源主站或资源网盘
+                  国际社区的官方群组，作者首选的发布地址，可以在其中的<code>#pc-mods</code>分类下载测试版Mod，英文，需国际联网。
                 </p>
-                <a href="https://discord.gg/beatsabermods" target="_blank" class="btn btn-primary">进入频道 (需梯子)</a>（同时提供了PC与一体机平台的Mod，不要选错分类！）
+                <a href="https://discord.gg/beatsabermods" target="_blank" class="btn btn-primary">进入频道</a>（同时提供了PC与一体机平台的Mod，不要选错分类！）
                 <hr>
                 <h4>BeatSaber游戏资源共享</h4>
                 <p>
-                  我会不定期将常用测试版Mod搬运上去，从各个渠道收集，<b class="rainbow2">其中包含一些未在BSMG中发布的Mod</b>。<br>
+                  以前会不定期搬运些Mod上去，不过现在已停更。<b class="rainbow2">里面有中文Mod</b>。<br>
                   进入<code>Mod相关文件</code>文件夹即可下载测试版Mod，游戏菜单界面的地板脚印内可看到版本。
                 </p>
-                <a href="http://share.wgzeyu.vip/?Ly9Nb2QlRTclOUIlQjglRTUlODUlQjMlRTYlOTYlODclRTQlQkIlQjYv" target="_blank" class="btn btn-primary">进入主站 (推荐)</a> <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-info">进入网盘</a><span class="rainbow2">（同时提供了PC与一体机平台的Mod，不要选错平台！）</span>
+                <a href="https://bs.wgzeyu.com/drive/" target="_blank" class="btn btn-primary">进入网盘</a><span class="rainbow2">（同时提供了PC与一体机平台的Mod，不要选错平台！）</span>
                 <hr>
 
                 <h3 id="modmanual_install">安装Mod</h3>
