--- a/pc-faq/index.html
+++ b/pc-faq/index.html
@@ -194,11 +194,7 @@
 				<div class="cd-faq__content">
 	       		   <div class="text-component">
 	       		   	<p>
-					  通常10秒就能装完全部常用Mod。但是，服务器在国外，中国国际线路经常拥塞，慢到下不动也很正常。
-					</p>
-					<p>
-					  推荐尝试以下方案解决Mod下载问题：<br>
-					  1. 下载<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">增强版ModAssistant</a>，<strong>打开后在左下方将Mod下载源切换为国内源</strong>。（不建议使用其他源）
+					  由于中国连接其他国家的国际带宽不够，经常发生拥塞，所以有时候会因为网络不好导致下不动。
 					</p>
 					<p>
 					  <div id="beatmodscf1" style="color:hsl(210, 14%, 30%);"></div>
@@ -226,7 +222,7 @@
 	      		      1. 确保游戏安装路径中不存在任何中文或特殊字符，<strong>否则将导致绝对装不上Mod</strong>（不是盘符 <span style="white-space:nowrap;">，你需要确保<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a></span>的“选项”界面中显示的游戏安装路径的整个框中不得存在任何中文字符）；<br>
 	      		      2. 确保<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>左下角选择的游戏版本，以及设置的游戏目录与你的游戏相同；<br>
 					  3. 安装Mod前至少要启动过一次安装/更新后的游戏，退出后才能安装Mod，显示安装完成再启动游戏；<br>
-					  4. <a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>推荐使用增强版的国内或国际源，不推荐使用增强版的包子源与原版。
+					  4. <a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>如果是增强版则推荐使用默认的国际源。
 					</p>
 	       		   	<p>
 	      		      <strong>如果Mod就是不生效，请尝试以下解决方法：</strong><br>
@@ -254,7 +250,7 @@
 					  如果你的ModAssistant报错，或者是网页报错，重装游戏是解决不了的！
 					</p>
 					<p>
-					  如果你安装了360之类的第三方杀软，建议在重装前将其更换为系统自带杀软（Windows Defender），<br>
+					  如果你安装了第三方杀软，建议在重装前将其更换为系统自带杀软（Windows Defender），<br>
 					  以下是最快且最彻底的重装游戏并恢复全部数据方案：
 					</p>
 					<p>
@@ -262,7 +258,7 @@
 					  2. 找到游戏目录，进入安装路径的上一级文件夹，将游戏安装文件夹的名字改掉，随便改，有变化就行；<br>
 					  3. 在Steam中找到Beat Saber，右键、属性、本地文件、验证游戏完整性，此时将会重新下载安装；<br>
 					  4. 等待安装完成后，先运行一次游戏然后再退出游戏；<br>
-					  5. 打开<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>安装Mod（请使用增强版的国内或国际源，不推荐使用增强版的包子源与原版）；<br>
+					  5. 打开<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>安装Mod；<br>
 					  6. 启动游戏看看，如果仍然有问题，试试在<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>的选项界面中找到游戏存档，备份后删除；<br>
 					  7. 如果一切正常，退出游戏，接下来开始恢复数据：<br>
 					  8. 从原来更名文件夹中删除该文件："Beat Saber<strong>\</strong>UserData<strong>\</strong><b>Beat Saber IPA.json</b>"；<br>
@@ -467,9 +463,9 @@
 					<p>
 						1. 使用ModAssistant卸载BSIPA（ModAssistant的“选项”界面中有这个按钮）<br>
 						2. Steam验证游戏文件<br>
-						3. 使用ModAssistant安装Mod（推荐使用增强版的国内或国际源，不推荐使用增强版的包子源与原版）<br>
+						3. 使用ModAssistant安装Mod<br>
 						4. 启动游戏，然后退出游戏<br>
-						5. 再次使用ModAssistant安装Mod（推荐使用增强版的国内或国际源，不推荐使用增强版的包子源与原版）<br>
+						5. 再次使用ModAssistant安装Mod<br>
 					</p>
 	   		       </div>
 				</div>
@@ -482,9 +478,9 @@
 					<p>
 						1. 使用ModAssistant卸载BSIPA（ModAssistant的“选项”界面中有这个按钮）<br>
 						2. Steam验证游戏文件<br>
-						3. 使用ModAssistant安装Mod（推荐使用增强版的国内或国际源，不推荐使用增强版的包子源与原版）<br>
+						3. 使用ModAssistant安装Mod<br>
 						4. 启动游戏，然后退出游戏<br>
-						5. 再次使用ModAssistant安装Mod（推荐使用增强版的国内或国际源，不推荐使用增强版的包子源与原版）<br>
+						5. 再次使用ModAssistant安装Mod<br>
 					</p>
 					<p>
 						如果你的游戏仍然装不上Mod，请按“<a class="text-bg-fx text-bg-fx--scale-y" href="#modbushengxiao">为什么我装的Mod不生效？</a>”的方法来解决。
@@ -513,7 +509,7 @@
 				<a class="cd-faq__trigger" href="#0"><span>游戏刚刚更新完，Mod就消失了，怎么办？需要禁止更新吗？</span></a>
 				<div class="cd-faq__content">
 	       		   <div class="text-component">
-	      		      <p>启动过一次新版游戏后，退出游戏使用<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>重新安装Mod即可。（推荐使用增强版的国内或国际源，不推荐使用增强版的包子源与原版）</p>
+	      		      <p>启动过一次新版游戏后，退出游戏使用<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modinstall_assistant" target="_blank">ModAssistant</a>重新安装Mod即可。</p>
 	      		      <p>注：游戏刚刚更新的几小时内可能识别不到最新的游戏版本，此时建议等待一会再安装Mod。</p>
 	      		      <p>
 	      		        我们反对禁用更新。现在Mod开发者都在紧随游戏最新版，<br>
@@ -536,7 +532,7 @@
 					</p>
 	      		      <iframe id="modaliases" width="100%" height="550"></iframe>
 	       		   	<p>
-	      		      （手机需<a class="text-bg-fx text-bg-fx--underline" onclick="cimg('modaliases','https://alias.beatmods.com/aliases.json?v=' + Math.random());" href="#0">点击此处加载</a>，若加载失败，请<a class="text-bg-fx text-bg-fx--underline" onclick="cimg('modaliases','https://beatmods.wgzeyu.com/alias/aliases.json?v=' + Math.random());" href="#0">点击此处</a>切换为国内中转）
+	      		      （手机需<a class="text-bg-fx text-bg-fx--underline" onclick="cimg('modaliases','https://alias.beatmods.com/aliases.json?v=' + Math.random());" href="#0">点击此处加载</a>）
 					</p>
 	   		       </div>
 				</div>
@@ -573,7 +569,7 @@
 					  在这之前，Mod相关文件会保存在Beat Saber\IPA\Pending
 					</p>
 	       		   	<p>
-	      		      另外，新版Mod已不再附带远古格式歌曲转换工具songe-converter，如有需要可进入<a class="text-bg-fx text-bg-fx--scale-x" href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank">BS游戏资源共享</a>中的工具目录下载。
+	      		      另外，新版Mod已不再附带远古格式歌曲转换工具songe-converter，如有需要可进入<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/drive/" target="_blank">BS游戏资源网盘</a>中的工具目录下载。
 					</p>
 	   		       </div>
 				</div>
@@ -583,9 +579,9 @@
 				<div class="cd-faq__content">
 	       		   <div class="text-component">
 	      		      <p>
-	      		      	目前我见到的该问题，全部都是由于安装Mod的过程遭到拦截导致的。<br>
-	      		      	我们一般推荐使用系统自带杀软（Windows Defender），一般不会有这种问题，查杀率也很高，<br>
-	      		      	而360这类第三方杀软经常无提示误拦截，所以出现这种情况也不奇怪。
+	      		      	目前我见到的该问题都是由于安装Mod的过程遭到拦截导致的。<br>
+	      		      	我一般推荐使用系统自带杀软（Windows Defender），一般不会有这种问题，查杀率也很高，<br>
+	      		      	而部分第三方杀软经常无提示误拦截，所以可能会出现这种情况。
 	      		      </p>
 	      		      <p>
 	      		      	如果更换杀软不能解决问题，可以尝试在右上角加群提问。
@@ -598,7 +594,7 @@
 				<div class="cd-faq__content">
 	       		   <div class="text-component">
 	      		      <p>
-	      		      	如果你在使用包子源（选项界面右上角），请切换为国际源或国内源，包子源有时会出问题。
+	      		      	如果你在使用包子源（左下角Mod下载源），请切换为国际源，包子源有时会出问题。
 	      		      </p>
 	      		      <p>
 	      		      	如果游戏刚刚发布更新、过去还不到12小时，那就是Mod还不支持这个版本，稍微等等再重新打开ModAssistant。
@@ -812,36 +808,12 @@
 				<div class="cd-faq__content">
 	       		   <div class="text-component">
 	       		   	<p>
-					  由于中国连接其他国家的国际带宽不够，经常发生拥塞，所以有时候会因为网络不好导致下不动。
-					</p>
-					<p>
-					  可以尝试按以下方法解决网页版BeatSaver手动下载歌曲问题：<br>
-					  1. 使用BeatSaver国内中转：<a class="text-bg-fx text-bg-fx--scale-x" href="http://beatsaver.wgzeyu.vip/" target="_blank">http://beatsaver.wgzeyu.vip/</a><br>
-					  2. 或者在<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/drive/" target="_blank">BS游戏资源共享</a>内下载歌曲、曲包；
-					</p>
-					<p>
-					  可以尝试按以下方法解决OneClick一键下载歌曲问题：<br>
-					  1. 将注册OneClick的ModAssistant更新至最新版（或者使用新版重新勾选OneClick来重新注册）；<br>
-					  2. 在ModAssistant界面左下角将OneClick下载源切换为国内源。
-					</p>
-					<p>
-					  可以尝试按以下方法解决游戏内BETTER SONG SEARCH下载问题：<br>
-					  1. 打开 Better Song Search<br>
-					  2. 点击 MORE▼<br>
-					  3. 点击 BETTERSONGSEARCH SETTINGS<br>
-					  4. 找到 Use Chinese BeatSaver Mirror，打开开关<br>
-					  5. 点击 OK, ENABLE<br>
-					  （操作后将切换为通过WGzeyu提供的国内中转来下载歌曲）
-					</p>
-					<p>
-					  可以尝试按以下方法解决游戏内MORE SONGS下载问题：<br>
-					  按照<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modmanual" target="_blank">【BS新手教程】</a>中的手动安装Mod教程来安装上国内中转下歌Mod。<br>
-					  （注意：国内版安装完成后再使用ModAssistant安装Mod将覆盖为原版，可重新手动安装覆盖回去解决）
+					  由于中国连接其他国家的网络带宽较低，经常发生拥塞，所以有时候会因为网络不好导致下不动。
 					</p>
 					<p>
 					  可以尝试以下任意方案解决网络问题：<br>
 					  1. 更换不同运营商的网络（可尝试手机热点）；<br>
-					  2. 使用科学上网，并确保路由模式及代理模式设置正确（否则不会经过科学上网）；<br>
+					  2. 施魔法；<br>
 					  3. 过段时间再试，避开高峰期。
 					</p>
 	   		       </div>
@@ -995,7 +967,7 @@
 					  	你的浏览器不支持播放当前视频
 					  </video>
 	      		    <p>
-					  新版的基础Mod已不再自带转换工具songe-converter.exe，请从<a class="text-bg-fx text-bg-fx--scale-x" href="http://share.wgzeyu.vip/?Ly8lRTUlQjclQTUlRTUlODUlQjclRUYlQkMlODglRTUlQTYlODJNb2QlRTUlQUUlODklRTglQTMlODUlRTUlOTklQTglRTMlODAlODElRTglQjAlQjElRTklOUQlQTIlRTclQkMlOTYlRTglQkUlOTElRTUlOTklQTglRTclQUQlODlCUyVFNyU5QiVCOCVFNSU4NSVCMyVFOCVCRCVBRiVFNCVCQiVCNiVFRiVCQyU4OS8=" target="_blank">BS游戏资源共享</a>的工具目录中下载。
+					  新版的基础Mod已不再自带转换工具songe-converter.exe，请从<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/drive/" target="_blank">BS游戏资源网盘</a>的工具目录中下载。
 					</p>
 	      		    <p>
 					  由于这些歌曲实在太过远古，基本是游戏刚刚发布测试版时最初的歌曲，很多谱面的方块排布都不够合理，数量也不多，所以Mod社区那边决定在最新版里已不再提供转换工具，就像是现在的电脑已经没有光驱一样，我个人也不是很推荐使用，不过如果你想使用，还是可以从我们网盘下载转换工具。
@@ -1143,20 +1115,8 @@
 				<div class="cd-faq__content">
 	       		   <div class="text-component">
 	       		   	<p>
-	      		      有很多作者不懂压缩格式，使用比同画质H264体积大数十倍的GIF做浏览图，很多浏览图比模型本身都大，<br>
-	      		      然而，大多数用户的国际网速够快，网站也不怕费流量，所以也就没多少人在意浏览图过大。<br>
-	      		      只是，中国国际线路经常拥塞，服务器也没在中国，所以。。。
+	      		      由于中国连接其他国家的国际带宽不够，经常发生拥塞，所以有时候会因为网络不好导致下不动。
 	      		    </p>
-					<p>
-					  如果你使用MoreModel在游戏内下歌，可尝试换为国内中转版插件：<br>
-					  按照<a class="text-bg-fx text-bg-fx--scale-x" href="https://bs.wgzeyu.com/pc-guide/#modmanual" target="_blank">【BS新手教程】</a>中的手动安装Mod教程操作即可。<br>
-					  （注意：国内版安装完成后再使用ModAssistant安装Mod将覆盖为原版，可重新手动安装覆盖回去解决）
-					</p>
-					<p>
-					  推荐尝试以下方案解决模型下载问题：<br>
-					  1. 使用ModelSaber国内中转：<a class="text-bg-fx text-bg-fx--scale-x" href="http://modelsaber.wgzeyu.vip/" target="_blank">http://modelsaber.wgzeyu.vip/</a><br>
-					  （如果使用OneClick一键添加则需要在ModAssistant左下角设置一下OneClick下载源）
-					</p>
 	       		   	<p>
 	      		      <div id="modelsabercf1" style="color:hsl(210, 14%, 30%);"></div>
 	      		    </p>
@@ -1570,10 +1530,10 @@
 				</div>
 			</li>
 			<li class="cd-faq__item">
-				<a class="cd-faq__trigger" href="#0" onclick="limg('laji360');"><span>游戏场景变灰、文字与一些环境内容消失了是怎么回事？</span></a>
+				<a class="cd-faq__trigger" href="#0" onclick="limg('llk36');"><span>游戏场景变灰、文字与一些环境内容消失了是怎么回事？</span></a>
 				<div class="cd-faq__content">
 	       		   <div class="text-component">
-	       		   	<p><img width="100%" id="laji360" src="assets/img/img.webp" data-src="assets/img/laji360.webp" class="lzy_img" onclick="limg('laji360');"></p>
+	       		   	<p><img width="100%" id="llk36" src="assets/img/img.webp" data-src="assets/img/llk36.webp" class="lzy_img" onclick="limg('llk36');"></p>
 	       		   	<p>
 	      		      如果游戏界面显示为上图这样，很可能是游戏文件被你安装的杀软删除了导致的，<br>
 	      		      请尝试退出杀软后在Steam中验证本地文件，<br>
@@ -1581,7 +1541,7 @@
 					</p>
 	       		   	<p>
 	      		      一般我们推荐使用系统自带的Windows Defender，通常不会有这些误删，<br>
-	      		      此问题是我在帮别人装Mod时发现的，那台电脑装有360。
+	      		      此问题是我在帮别人装Mod时发现的，那台电脑装有第三方杀软。
 					</p>
 	   		       </div>
 				</div>
