--- a/buy/guide.html
+++ b/buy/guide.html
@@ -214,7 +214,7 @@
 
                 <h3 id="quest_warning">注意事项</h3>
                 <p>Oculus有两个平台：Rift(电脑端)平台、Quest(一体机)平台，<b class="rainbow2">大部分游戏在不同平台之间不互通！</b></p>
-                <p><strong>购买前请务看清楚自己买的是什么！</strong>买电脑版无法在一体机上玩，买一体机版也无法在电脑上玩！</p>
+                <p><strong>购买前请务必看清楚自己买的是什么！</strong>买电脑版无法在一体机上玩，买一体机版也无法在电脑上玩！</p>
                 <p><img src="img/quest_warning1.png" class="img-responsive img-thumbnail"></p>
                 <p><img src="img/quest_warning2.png" class="img-responsive img-thumbnail"></p>
 
@@ -228,7 +228,6 @@
                 <p>
                   <strong>这个方法是通过第三方渠道下单，可靠性低，不推荐</strong>，下方有其他购买方法。<br>（或者点击左上方快捷导航可快速切换）
                 </p>
-                <p>在购物平台中搜索 <code>节奏光剑 兑换码</code> ，找到商品后核对是<strong>Quest一体机平台的正版BeatSaber兑换码</strong>即可下单。</p>
                 <div class="intro2 clearfix">
                   <p>
                     <i class="fa fa-exclamation-triangle"></i> 请务必选择有担保交易的、可靠的购物平台，并保留好你的购买记录。<br>
