删除无效网址

--- a/drive/drive.html
+++ b/drive/drive.html
@@ -110,7 +110,7 @@
                   </ul>
                 </div>
                 <div class="generic_price_btn clearfix">
-                  <a href="http://share.wgzeyu.vip/" target="_blank">进入下载</a>
+                  <a href="#012" target="_blank">进入下载</a>
                 </div>
               </div>
             </div>
