--- a/oq-guide-qp/index.html
+++ b/oq-guide-qp/index.html
@@ -84,12 +84,12 @@
                   <svg class="f-header__dropdown-icon icon" aria-hidden="true" viewBox="0 0 12 12"><path d="M6,9l4-5H2Z"/></svg>
                 </a>
                 <ul class="f-header__dropdown">
-                  <li><a href="http://share.wgzeyu.vip/" class="f-header__dropdown-link">主站 | 推荐用于小文件</a></li>
+                  <li><a href="#012" class="f-header__dropdown-link">主站 | 推荐用于小文件</a></li>
                   <li><a href="https://bs.wgzeyu.com/drive/" class="f-header__dropdown-link">网盘 | 推荐用于大文件</a></li>
                   <li><a href="https://bs.wgzeyu.com/songs/" class="f-header__dropdown-link">同步 | 曲包文件夹同步</a></li>
                 </ul>
               </li>
-              <li class="f-header__item"><a href="https://viounti.wgzeyu.vip/" class="f-header__link">打分指南</a></li>
+              <li class="f-header__item"><a href="#viounti" class="f-header__link">打分指南</a></li>
               <li class="f-header__item">
                 <a href="#0" class="f-header__link">
                   <span>相关网站</span>
